--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "firebase": "^10.12.4",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-tabs": "^6.0.2"
   },
